fix: revert work on APIM-8542
This reverts commits:
- c760f61ba2b6e71ef3d1b189ca1ae97cf18de3d2
- 50d3537dc4a55bf1e5d73cefbf27bb2c1a79374f