@@ -15,11 +15,12 @@
  */
 package io.gravitee.rest.api.service.impl;
 
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.eq;
-import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
@@ -29,6 +30,7 @@ import com.fasterxml.jackson.databind.ser.PropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 import io.gravitee.common.data.domain.Page;
 import io.gravitee.definition.jackson.datatype.GraviteeMapper;
+import io.gravitee.definition.model.DefinitionVersion;
 import io.gravitee.repository.management.api.ApiRepository;
 import io.gravitee.repository.management.api.search.ApiCriteria;
 import io.gravitee.repository.management.api.search.ApiFieldFilter;
@@ -50,34 +52,37 @@ import io.gravitee.rest.api.service.PlanService;
 import io.gravitee.rest.api.service.RoleService;
 import io.gravitee.rest.api.service.SubscriptionService;
 import io.gravitee.rest.api.service.UserService;
+import io.gravitee.rest.api.service.WorkflowService;
 import io.gravitee.rest.api.service.common.GraviteeContext;
 import io.gravitee.rest.api.service.configuration.flow.FlowService;
 import io.gravitee.rest.api.service.converter.ApiConverter;
 import io.gravitee.rest.api.service.converter.CategoryMapper;
-import io.gravitee.rest.api.service.impl.search.SearchResult;
 import io.gravitee.rest.api.service.jackson.filter.ApiPermissionFilter;
 import io.gravitee.rest.api.service.search.SearchEngineService;
 import io.gravitee.rest.api.service.v4.ApiSearchService;
 import io.gravitee.rest.api.service.v4.PrimaryOwnerService;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import org.assertj.core.api.Condition;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.Before;
+import org.junit.Test;
+import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.Spy;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.MockitoJUnitRunner;
 
 /**
  * @author Azize Elamrani (azize dot elamrani at gmail dot com)
  */
-@ExtendWith(MockitoExtension.class)
+@RunWith(MockitoJUnitRunner.class)
 public class ApiService_SearchTest {
 
     @InjectMocks
-    private ApiServiceImpl apiService;
+    private ApiServiceImpl apiService = new ApiServiceImpl();
 
     @Mock
     private ApiRepository apiRepository;
@@ -119,6 +124,17 @@ public class ApiService_SearchTest {
 
     private final CategoryMapper categoryMapper = spy(new CategoryMapper(mock(CategoryService.class)));
 
+    private ApiConverter apiConverter = Mockito.spy(
+        new ApiConverter(
+            objectMapper,
+            mock(PlanService.class),
+            mock(FlowService.class),
+            categoryMapper,
+            parameterService,
+            mock(WorkflowService.class)
+        )
+    );
+
     @Mock
     private SearchEngineService searchEngineService;
 
@@ -134,17 +150,13 @@ public class ApiService_SearchTest {
     @Mock
     private ApiSearchService apiSearchService;
 
-    @Mock
-    private ApiConverter apiConverter;
-
-    @BeforeEach
+    @Before
     public void setUp() {
         PropertyFilter apiMembershipTypeFilter = new ApiPermissionFilter();
-        objectMapper.setFilterProvider(new SimpleFilterProvider(Map.of("apiMembershipTypeFilter", apiMembershipTypeFilter)));
+        objectMapper.setFilterProvider(
+            new SimpleFilterProvider(Collections.singletonMap("apiMembershipTypeFilter", apiMembershipTypeFilter))
+        );
         GraviteeContext.cleanContext();
-        lenient()
-            .when(apiConverter.toApiEntity(any(), any(), any(), anyBoolean()))
-            .thenAnswer(invocation -> ApiEntity.builder().id(invocation.getArgument(1, Api.class).getId()).build());
     }
 
     @Test
@@ -152,11 +164,20 @@ public class ApiService_SearchTest {
         final Api api1 = new Api();
         api1.setId("api1");
         api1.setName("api1");
+        final Api api2 = new Api();
+        api2.setId("api2");
+        api2.setName("api2");
 
-        Page<Api> page = new Page<>(List.of(api1), 2, 1, 2);
-        when(apiRepository.search(any(), any(), any(), any())).thenReturn(page);
-
-        when(searchEngineService.search(any(), any())).thenReturn(new SearchResult(List.of(api1.getId())));
+        Page<Api> page = new Page<>(Arrays.asList(api1), 2, 1, 2);
+        when(
+            apiRepository.search(
+                eq(getDefaultApiCriteriaBuilder().environmentId("DEFAULT").build()),
+                any(),
+                any(),
+                eq(new ApiFieldFilter.Builder().excludePicture().build())
+            )
+        )
+            .thenReturn(page);
 
         UserEntity admin = new UserEntity();
         admin.setId("admin");
@@ -170,8 +191,12 @@ public class ApiService_SearchTest {
             new PageableImpl(2, 1)
         );
 
-        assertThat(apiPage).is(page(2, 1, 2));
-        assertThat(apiPage.getContent()).map(ApiEntity::getId).containsOnly(api1.getId());
+        assertNotNull(apiPage);
+        assertEquals(1, apiPage.getContent().size());
+        assertEquals(api1.getId(), apiPage.getContent().get(0).getId());
+        assertEquals(2, apiPage.getPageNumber());
+        assertEquals(1, apiPage.getPageElements());
+        assertEquals(2, apiPage.getTotalElements());
     }
 
     @Test
@@ -188,7 +213,7 @@ public class ApiService_SearchTest {
         api3.setId("api3");
         api3.setName("API Test");
 
-        when(apiSearchService.searchIds(eq(GraviteeContext.getExecutionContext()), any(), any(), any(), anyBoolean()))
+        when(apiSearchService.searchIds(eq(GraviteeContext.getExecutionContext()), any(), any(), any(), eq(true)))
             .thenReturn(List.of(api3.getId(), api1.getId(), api2.getId()));
 
         when(
@@ -199,7 +224,7 @@ public class ApiService_SearchTest {
                 ApiFieldFilter.allFields()
             )
         )
-            .thenReturn(new Page<>(List.of(api3, api1, api2), 0, 3, 3));
+            .thenReturn(new Page<>(Arrays.asList(api3, api1, api2), 0, 3, 3));
 
         UserEntity admin = new UserEntity();
         admin.setId("admin");
@@ -222,23 +247,25 @@ public class ApiService_SearchTest {
         final Page<ApiEntity> apiPage = apiService.search(
             GraviteeContext.getExecutionContext(),
             "API Test",
-            Map.of(),
+            emptyMap(),
             null,
             new PageableImpl(1, 10)
         );
 
-        assertThat(apiPage).is(page(1, 3, 3));
+        assertThat(apiPage.getPageNumber()).isEqualTo(1);
+        assertThat(apiPage.getPageElements()).isEqualTo(3);
+        assertThat(apiPage.getTotalElements()).isEqualTo(3);
 
         assertThat(apiPage.getContent()).extracting(ApiEntity::getId).containsExactly(api3.getId(), api1.getId(), api2.getId());
     }
 
-    private <T> Condition<Page<T>> page(int pageNumber, int pageElements, int totalElements) {
-        return new Condition<>(
-            p -> pageNumber == p.getPageNumber() && pageElements == p.getPageElements() && totalElements == p.getTotalElements(),
-            "pageNumber:%d pageElements:%d totalElements:%d",
-            pageNumber,
-            pageElements,
-            totalElements
-        );
+    private ApiCriteria.Builder getDefaultApiCriteriaBuilder() {
+        // By default in this service, we do not care for V4 APIs.
+        List<DefinitionVersion> allowedDefinitionVersion = new ArrayList<>();
+        allowedDefinitionVersion.add(null);
+        allowedDefinitionVersion.add(DefinitionVersion.V1);
+        allowedDefinitionVersion.add(DefinitionVersion.V2);
+
+        return new ApiCriteria.Builder().definitionVersion(allowedDefinitionVersion);
     }
 }
